Fixed spacing in post list

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -222,7 +222,7 @@
   }
 }
 
-.post-h3 {
+h3.post-h3 {
   margin-bottom: 0;
 }
 
